Added 2015 placeholder pages for photos pages and village pages

--- a/2015/client/template/2015-banner-topnav.html
+++ b/2015/client/template/2015-banner-topnav.html
@@ -64,7 +64,9 @@
                             <li><a href="/2015/visit.html">Visit <i class="fa fa-home"></i></a></li>
                             <li><a href="/2015/visit-dates-hours.html">Dates &amp; Hours</a></li>
                             <li><a href="/2015/visit-to-do.html">Things To Do</a></li>
+                            <!--
                             <li><a href="/2015/visit-village-map.html">Village Map</a></li>
+                            -->
                             <li><a href="/2015/visit-directions-transportation.html">Directions &amp; Transportation</a></li>
                         </ul>
                     </li>
@@ -115,9 +117,11 @@
                             aria-expanded="false">Photos <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="/2015/photos.html">Photos <i class="fa fa-home"></i></a></li>
-                            <li><a href="#">Daily Photos</a></li>
-                            <li><a href="#">Gallery of Houses</a></li>
-                            <li><a href="#">Village Time-Lapse</a></li>
+                            <!--
+                            <li><a href="/2015/photos-daily.html">Daily Photos</a></li>
+                            <li><a href="/2015/photos-gallery-houses.html">Gallery of Houses</a></li>
+                            <li><a href="/2015/photos-time-lapse.html">Village Time-Lapse</a></li>
+                            -->
                         </ul>
                     </li>
 
