--- a/2015/client/template/2015-leftnav.html
+++ b/2015/client/template/2015-leftnav.html
@@ -10,7 +10,9 @@
         <ul class="nav hide">
         <li><a href="/2015/visit-dates-hours.html">Dates &amp; Hours</a></li>
         <li><a href="/2015/visit-to-do.html">Things To Do</a></li>
+        <!--
         <li><a href="/2015/visit-village-map.html">Village Map</a></li>
+        -->
         <li><a href="/2015/visit-directions-transportation.html">Directions &amp; Transportation</a></li>
         </ul></li>
     </ul>
@@ -69,7 +71,10 @@
             <li><a href="/2015/competition-contests-energy-balance.html">Energy Balance</a></li>
         </ul></li>
 
-        <li><a href="/2015/village-energy-balance.html">Village Energy Balance</a></li>
+        <!--
+        <li><a href="/2015/competition-village-energy-balance.html">Village Energy Balance</a></li>
+        -->
+
         <li><a href="/2015/competition-rules.html">Rules</a></li>
         <li><a href="/2015/competition-juries.html">Juries</a></li>
         </ul></li>
@@ -90,11 +95,14 @@
     <!-- PHOTOS -->
     <ul class="nav hide">
         <li><a href="/2015/photos.html">Photos</a>
+        <!--
         <ul class="nav hide">
-        <li><a href="#">Daily Photos</a></li>
-        <li><a href="#">Gallery of Houses</a></li>
-        <li><a href="#">Village Time-Lapse</a></li>
-        </ul></li>
+        <li><a href="/2015/photos-daily.html">Daily Photos</a></li>
+        <li><a href="/2015/photos-gallery-houses.html">Gallery of Houses</a></li>
+        <li><a href="/2015/photos-time-lapse.html">Village Time-Lapse</a></li>
+        </ul>
+        -->
+        </li>
     </ul>
 
     <!-- VIDEOS -->
