Removed scores and VEB from nav

--- a/2015/client/template/2015-leftnav.html
+++ b/2015/client/template/2015-leftnav.html
@@ -20,10 +20,10 @@
     <!-- COMPETITION -->
     <ul class="nav hide">
         <li><a href="/2015/competition.html">Competition</a>
-
+        <!--
         <ul class="nav hide">
 
-        <li><a href="#">Scores &amp; Standings</a>
+        <li><a href="/2015/competition-scores.html">Scores &amp; Standings</a>
 
             <ul class="nav hide">
             <li><a href="#">Final Results</a></li>
@@ -31,7 +31,9 @@
             <li><a href="#">Scores by Team</a></li>
             <li><a href="#">Scores by Contest</a></li>
             <li><a href="#">Scores by Day</a></li>
-        </ul></li>
+        </ul>
+        -->
+        </li>
 
         <li><a href="/2015/competition-teams.html">Teams</a>
 
