Concat scripts. Add RSS script. Init.

--- a/2015/client/template/2015-scripts.html
+++ b/2015/client/template/2015-scripts.html
@@ -1,1 +1,8 @@
+
+
+<!-- RSS script (included globally)
+<script src="client/js/plugins.min.js"></script>
+-->
+
+<!-- App init-->
 <script src="client/js/app.js"></script>
