--- a/client/template/global-scripts.html
+++ b/client/template/global-scripts.html
@@ -4,17 +4,22 @@
 <!-- Bootstrap -->
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
-<!-- Icons plugin -->
+<!--
 <script src="/client/js/iconomatic/jquery.iconomatic.min.js"></script>
-
-<!-- Flickr plugin -->
 <script src="/client/js/jflickrrest/jquery.jflickrrest.js"></script>
-
-<!-- RSS script -->
-<script src="/client/js/rss/jquery.rss.min.js"></script>
-
-<!-- Slider/Carousel Plugin -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/flexslider/2.5.0/jquery.flexslider.min.js"></script>
+-->
+
+<!-- All global plugins -->
+<!--
+    Icons plugin
+    Flickr plugin
+    RSS plugin
+    Slider/Carousel Plugin
+-->
+<script src="client/js/plugins.min.js"></script>
+
+
 
 <!-- App Init -->
 <script src="/client/js/app.js"></script>
