Fixed file path to plugins js

--- a/client/template/global-scripts.html
+++ b/client/template/global-scripts.html
@@ -17,7 +17,7 @@
     RSS plugin
     Slider/Carousel Plugin
 -->
-<script src="client/js/plugins.min.js"></script>
+<script src="/client/js/plugins.min.js"></script>
 
 
 
