Added 3rd level nav for news section

--- a/2015/client/template/2015-leftnav.html
+++ b/2015/client/template/2015-leftnav.html
@@ -90,7 +90,12 @@
         <li><a href="/blog/">News Blog</a></li>
         <li><a href="/2015/news-newsletter.html">Newsletter</a></li>
         <li><a href="/2015/news-in-the-news.html">In the News</a></li>
-        <li><a href="/2015/news-press-room.html">Press Room</a></li>
+        <li><a href="/2015/news-press-room.html">Press Room</a>
+            <ul class="nav hide">
+            <li><a href="/2015/news-press-visuals.html">Visuals</a></li>
+            <li><a href="/2015/news-press-bios.html">Leadership Bios</a></li>
+            <li><a href="/2015/news-press-releases.html">Press Releases</a></li>
+            </ul></li>
         </ul></li>
     </ul>
 
