--- a/client/template/global-footer.html
+++ b/client/template/global-footer.html
@@ -14,7 +14,7 @@
 
                 <ul class="list-inline small">
                     <li><a href="/">Home</a></li>
-                    <li><a href="/contacts.html">Webmaster</a></li>
+                    <li><a href="/about-contacts.html">Webmaster</a></li>
                     <li><a href="http://www.eere.energy.gov/webpolicies/">Web Policies</a></li>
                     <li><a href="http://www.eere.energy.gov/site_administration/privacy.html">Security &amp; Privacy</a></li>
                     <li><a href="http://www.usa.gov/">USA.gov</a></li>
@@ -33,16 +33,16 @@
             <div class="footer-sponsors-2015 hide">
 
                 <div class="row">
-                    <div class="col-sm-2 col-sm-offset-2">
+                    <div class="col-xs-6 col-xs-offset-3 col-sm-2 col-sm-offset-2">
                         <img src="/client/img/nrel-logo.png" alt="NREL" class="img-responsive logo">
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-xs-6 col-xs-offset-3 col-sm-2 col-sm-offset-0">
                         <img src="/2015/assets/images/sponsor-footer-edison.png" alt="Edison International" class="img-responsive logo">
                     </div>
-                    <div class="col-sm-2">
+                    <div class="col-xs-6 col-xs-offset-3 col-sm-2 col-sm-offset-0">
                         <img src="/2015/assets/images/sponsor-footer-schneider.png" alt="Schneider Electric" class="img-responsive logo">
                     </div>
-                    <div class="col-sm-1">
+                    <div class="col-xs-6 col-xs-offset-3 col-sm-1 col-sm-offset-0">
                         <img src="/2015/assets/images/sponsor-footer-wells-fargo.png" alt="Wells Fargo" class="img-responsive logo ">
                     </div>
                 </div>
